# reachy2_mujoco

./: .gitignore  README.md  pyproject.toml  reachy.yaml  reachy2_mujoco.py  requirements.txt  setup.cfg
MISC/: requirements.txt
MISC/grpc_stuff/: arm.py  components.py  head.py  mobile_base.py  mujoco_bridge_node.py  orbita2d.py  orbita3d.py  parts.py  reachy.py  utils.py
MISC/new_grpc_stuff/: joint_server.py
MISC/scripts/: dae_to_obj.py
examples/: goto_test.py  grasp_pill.py  grasp_test.py  mujoco_client_example.py  racket.py
fake_server/: README.md  client.py  mujoco_client_example.py  mujoco_server.py  reachy_mujoco.py  requirements.txt  server.py
fake_server/mjcf/: MUJOCO_LOG.TXT  scene.xml
grpc_stuff/: arm.py  hand.py  head.py  mobile_base.py  mujoco_bridge_node.py  orbita2d.py  orbita3d.py  reachy.py  server.py  utils.py
mjcf/: reachy2.xml
modified_urdf/: reachy2.xml
modified_urdf/arm_description/meshes/: 2D_sphere_visual.dae  forearm_visual.dae
modified_urdf/reachy_description/meshes/: mobile_base_visual.dae  torso_collider_no_cone.dae  torso_collider_no_cone.stl
new_grpc_stuff/: joint_server.py
original_urdf/arm_description/meshes/: forearm_collider.dae  pincette_distal_collider.dae  pincette_left_visual.dae
original_urdf/reachy_description/meshes/: head_visual.dae
reachy2_mujoco/: __init__.py
reachy2_mujoco/description/mjcf/: ball_racket_scene.xml  desk_scene.xml  fruits_scene.xml  kitchen_scene.xml  reachy2.xml  reachy2_racket.xml  scene.xml  table_scene.xml
reachy2_mujoco/description/modified_urdf/: reachy2.urdf
reachy2_mujoco/description/new_mjcf/: reachy2.xml
reachy2_mujoco/description/original_urdf/: reachy2.urdf
reachy2_mujoco/description/racket/: config.json  part_1.part  part_1.stl  racket.urdf  racket.xml
reachy2_mujoco/description/racket2/: handle.part  plane.part  racket.urdf  racket.xml
reachy2_mujoco/reachy2_mujoco/: __init__.py  client.py  mujoco_server.py  reachy_mujoco.py  utils.py
(+51 files in other folders)
