[metadata]
name = reachy2_mujoco
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/reachy2_mujoco
description = Reachy2 mujoco fake server
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =reachy2_mujoco
install_requires =
    rpyc==6.0.1
    mujoco==3.2.6
    pyquaternion==0.9.9
    opencv-contrib-python==4.10.0.84
    reachy2_symbolic_ik @ git+https://github.com/pollen-robotics/reachy2_symbolic_ik
    FramesViewer==1.0.2


[options.packages.find]
where=reachy2_mujoco


[options.extras_require]


[options.entry_points]
console_scripts = 
    reachy2-mujoco = reachy2_mujoco.mujoco_server:main